Fix janky scrolling on iOS

--- a/src/global.scss
+++ b/src/global.scss
@@ -77,7 +77,7 @@ main ~ main:last-of-type:not([class]) {
 }
 
 .Main > [data-key='interstitial'] {
-  height: 80dvh;
+  height: lvh;
 }
 
 .Main > [data-key='interstitial']:first-of-type {
